<resources>
    <string name="app_name">My Note</string>
    <string name="My_Note">My Note</string>
    <string name="label_must_fill">Wajib diisi</string>
    <string name="search_hint">Search here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Enter_your_password">Enter your password ...</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Please_login_with_your_email_and_password">Please login with your email and password</string>
    <string name="Email">Email</string>
    <string name="Enter_your_email">Enter your email ...</string>
    <string name="My_notes">My Notes</string>
    <string name="Password">Password</string>
    <string name="Tittle">Tittle</string>
    <string name="Lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley</string>
    <string name="Edited_at_22_27">Edited at 22.27</string>
    <string name="Profile">Profile</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="Logout">Logout</string>
</resources>