<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/shape"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background" />

        <TextView
            android:id="@+id/tv_my_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/My_notes"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_my_notes"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="top"
            android:text="@string/Please_login_with_your_email_and_password"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="275dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Email"
            android:textColor="@color/blues"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etl_email"
            android:layout_width="312dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="305dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_bg"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/Enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etl_email"
            android:layout_marginStart="24dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Password"
            android:textColor="@color/blues"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvl_password"
            android:background="@color/transparant"
            android:layout_marginTop="@dimen/_5sdp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etl_password"
                android:layout_width="312dp"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/Enter_your_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="312dp"
            android:layout_height="53dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="543dp"
            android:textColor="@color/white"
            android:background="@drawable/custom_bg1"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Login"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="312dp"
            android:layout_height="53dp"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_bg2"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Register"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

    </RelativeLayout>
</layout>