<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.update.UpdateActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_update_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_back"/>

            <ImageView
                android:id="@+id/btn_check"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_check"
                android:layout_marginTop="45dp"
                app:menu="@menu/icon_addnote"
                android:onClick="save"
                android:layout_marginEnd="@dimen/_60sdp"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_clear"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="27dp">

                <EditText
                    android:id="@+id/et_up_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:background="@color/transparant"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/Tittle"
                    android:orientation="vertical"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/et_up_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/transparant"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/Lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley"
                    android:orientation="vertical"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="728dp"
                    android:layout_marginBottom="52dp"
                    android:text="@string/Edited_at_22_27"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</layout>